--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Conexao
 spring.datasource.url=jdbc:postgresql://localhost:5432/qeepmoving
 spring.datasource.username=postgres
-spring.datasource.password=Coelho@1979
+spring.datasource.password=XXXXXXXXX
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #JPA
